# clp_esp32

./: CMakeLists.txt  LADDER_DO_TESTE.ld  README.md  example_program.ld
main/: CMakeLists.txt  io_map.c  io_map.h  ladder.c  ladder.h  ld_program.c  ld_program.h  main.c  plc_coms.c  plc_coms.h  plc_scan.c  plc_scan.h  plc_time.c  plc_time.h
